[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ButterLayer1.png" type="Texture" id=1]
[ext_resource path="res://assets/bread.png" type="Texture" id=2]
[ext_resource path="res://assets/PeanutButterLayer2.png" type="Texture" id=3]
[ext_resource path="res://assets/StrawberryJamLayer.png" type="Texture" id=4]
[ext_resource path="res://assets/PeanutButterLayer1.png" type="Texture" id=5]
[ext_resource path="res://props/BreadSlice.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 55.5576, 56.2223 )

[node name="BreadSlice" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.583984, 5.83978 )
shape = SubResource( 1 )

[node name="Base" type="Sprite" parent="."]
scale = Vector2( 0.279999, 0.279999 )
texture = ExtResource( 2 )

[node name="Butter" type="Node2D" parent="."]

[node name="Layer1" type="Sprite" parent="Butter"]
visible = false
position = Vector2( 1.13916, 8.82854 )
scale = Vector2( 0.387812, 0.227813 )
texture = ExtResource( 1 )

[node name="Layer2" type="Sprite" parent="Butter"]
visible = false
position = Vector2( 1.09181, -31.8396 )
scale = Vector2( 0.387812, 0.227813 )
texture = ExtResource( 1 )

[node name="Jam" type="Sprite" parent="."]
visible = false
position = Vector2( 4.72026, 2.09789 )
rotation = 0.132405
scale = Vector2( 0.379247, 0.259248 )
texture = ExtResource( 4 )

[node name="PeanutButter" type="Node2D" parent="."]

[node name="Layer1" type="Sprite" parent="PeanutButter"]
visible = false
position = Vector2( -1.46291, 0.43965 )
scale = Vector2( 0.372217, 0.292218 )
texture = ExtResource( 5 )

[node name="Layer2" type="Sprite" parent="PeanutButter"]
visible = false
position = Vector2( 2.9742, 1.6409 )
rotation = -0.0265471
scale = Vector2( 0.32, 0.240001 )
texture = ExtResource( 3 )
[connection signal="input_event" from="." to="." method="_on_BreadSlice_input_event"]
